fix block level spacing error

--- a/public/prod/website.css
+++ b/public/prod/website.css
@@ -316,20 +316,21 @@ tbody tr:nth-child(even) {
     @media only screen and (max-width: 1024px) and (min-width: 415px) {
       .landing h3 {
         font-size: 5.2vw; } }
-  .landing h5 {
+  .landing .h5 {
     font-size: 6.5vw;
     font-weight: 400;
     color: white;
     text-align: right;
     width: 80vw;
-    padding: 0vh 0vw 2vh 15vw; }
+    padding: 0vh 0vw 12vh 15vw;
+    display: block; }
     @media only screen and (min-width: 1025px) {
-      .landing h5 {
+      .landing .h5 {
         font-size: 2.2vw;
         width: 60vw;
         padding: 0vh 0vw 2vh 30vw; } }
     @media only screen and (max-width: 1024px) and (min-width: 415px) {
-      .landing h5 {
+      .landing .h5 {
         font-size: 5.2vw; } }
 
 .social {
@@ -449,7 +450,8 @@ input[type="submit"] {
   background-color: black; }
 
 .blue {
-  color: white; }
+  color: white;
+  padding-bottom: 10vh; }
   @media only screen and (min-width: 1025px) {
     .blue {
       height: 384vh; } }
@@ -564,8 +566,7 @@ input[type="submit"] {
       .blue .stats.second {
         height: 0; } }
   .blue .stats.third {
-    height: 23vh;
-    margin-bottom: 10vh; }
+    height: 23vh; }
     @media only screen and (min-width: 1025px) {
       .blue .stats.third {
         height: 0vh; } }
