--- a/public/stylesheets/sass/_landing.sass
+++ b/public/stylesheets/sass/_landing.sass
@@ -75,13 +75,14 @@
       padding: 10vh 0vw 5vh 15vw
     @include tablet
       font-size: 5.2vw
-  h5
+  .h5
     font-size: 6.5vw
     font-weight: 400
     color: white
     text-align: right
     width: 80vw
-    padding: 0vh 0vw 2vh 15vw
+    padding: 0vh 0vw 12vh 15vw
+    display: block
     @include desktop
       font-size: 2.2vw
       width: 60vw
@@ -216,6 +217,7 @@ input[type="submit"]
 .blue
   color: white
   // height: 384vh
+  padding-bottom: 10vh
   @include desktop
     height: 384vh
   @include tablet
@@ -316,7 +318,6 @@ input[type="submit"]
       height: 0
   .stats.third
     height: 23vh
-    margin-bottom: 10vh
     @include desktop
       height: 0vh
     @include tablet
